# craft-world

./: .gitignore  Cargo.toml  README.md
assets/sprites/: player.ron  terrain.ron
config/: bindings.ron  display.ron
src/: main.rs
src/components/: mod.rs  player.rs  player_move.rs  terrain.rs
src/resources/: input.rs  mod.rs  player.rs  sprites.rs  terrain.rs
src/states/: mod.rs  world.rs
src/systems/: mod.rs  player_move.rs  player_render.rs  terrain_move.rs  terrain_render.rs
