[package]
name = "craft-world"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
amethyst = "0.15.*"
serde = "1.0.*"
log = "0.4.*"
derivative = "2.1.*"
simdnoise = "3.1.*"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
